GNOME Bugzilla – Bug 701900
Race condition in ev-sidebar-thumbnails
Last modified: 2013-06-14 15:49:37 UTC
There is a race condition at around line nos 422-435 in ev-sidebar-thumbnails.c. An EvJob is being initialized and pushed to the scheduler before connecting the finished callback for the job. >job = ev_job_thumbnail_new (priv->document, page, priv->rotation, get_scale_for_page (sidebar_thumbnails, page)); >ev_job_thumbnail_set_has_frame (EV_JOB_THUMBNAIL (job), FALSE); >ev_job_scheduler_push_job (EV_JOB (job), EV_JOB_PRIORITY_HIGH); > >g_object_set_data_full (G_OBJECT (job), "tree_iter", > gtk_tree_iter_copy (&iter), > (GDestroyNotify) gtk_tree_iter_free); >g_signal_connect (job, "finished", > G_CALLBACK (thumbnail_job_completed_callback), > sidebar_thumbnails);
Created attachment 246354 [details] [review] Fix race condition in evince-sidebar-thumbnails.c Please review the proposed changes. Thanks !
Comment on attachment 246354 [details] [review] Fix race condition in evince-sidebar-thumbnails.c Pushed to git master, thanks!