sidebar-thumbnails: Connect to job finished signal before scheduling the job

The bug fixes a race condition.

https://bugzilla.gnome.org/show_bug.cgi?id=701900